# MaxEmbed

./: .gitignore  CMakeLists.txt  readme.md  vcpkg.json
ae_scripts/: cdf.sh  different_algorithm.sh  exp1.sh  exp2.sh  exp3.sh  exp4.sh  main_evaluation.sh  no_cache.sh  performance.sh  plot_all.sh  run_all.sh
ae_scripts/python/: figure_12.py  figure_13.py  figure_14.py  figure_8-10-11-12.py  figure_8-10-11.py  figure_9.py  merge_data.py
client/: CMakeLists.txt
client/include/: array.h  folly_wrapper.h  loader.h  mapper.h  mytype.h  spdk_wrapper.h  timer.h
client/src/: client.cpp  mapper.cpp  spdk_wrapper.cpp
partition/: CMakeLists.txt
partition/include/: partition.h
partition/preprocess/: part_train_test.py
partition/preprocess/amazon_m2/: process.py
partition/preprocess/avazu_script/: preprocess.py
partition/preprocess/criteoTB_script/: CMakeLists.txt  merge_result.cpp  read_and_trans.cpp  split_train_test.cpp
partition/preprocess/criteo_script/: preprocess.py
partition/src/: partition.cpp  partition_step.cpp  replication_step.cpp  shrink_replication.cpp  trans_query.cpp
